@@ -18,6 +18,9 @@ bzr-svn 0.5.3                   UNRELEASED
    * Handle corner case following branch paths outside of prefixes in 
      revision metadata browser.
 
+   * Handle strange corner case in HTTP, where get_dir() works on files and we 
+     accidently start to call update() on files.
+
 bzr-svn 0.5.2					2009-02-18
 
   BUG FIXES
